examples/test/testpolicy8109.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8109
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key35: value18
      key0: value17
      key29: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value26
          key35: value28
      podSelector:
        matchLabels:
          key13: value45
